--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-watch": "^5.1.2",
     "jasmine": "^3.4.0"
+  },
+  "dependencies": {
+    "ws": "^7.0.0"
   }
 }
