--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "esw \"**/*.js\" --clear",
     "lint-fix": "esw \"**/*.js\" --fix",
-    "test": "npm run lint-fix && jasmine"
+    "test": "npm run lint-fix && jasmine",
+    "build-doc": "mmdc -i doc/sequenceDiagramsMmd/userConnection.mmd -o doc/sequenceDiagramsPng/userConnection.png -t neutral"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,8 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-watch": "^5.1.2",
-    "jasmine": "^3.4.0"
+    "jasmine": "^3.4.0",
+    "mermaid.cli": "^0.5.1"
   },
   "dependencies": {
     "ws": "^7.0.0"
