--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "lint": "esw \"**/*.js\"",
     "lint-fix": "esw \"**/*.js\" --fix",
     "test": "npm run lint && jasmine",
+    "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
     "spec-status": "jasmine --reporter=jasmine-spec-status-md > ./doc/specStatus.md",
-    "build-doc": "npm run spec-status && mmdc -i doc/sequenceDiagramsMmd/userConnection.mmd -o doc/sequenceDiagramsPng/userConnection.png -t neutral && mmdc -i doc/sequenceDiagramsMmd/lobbyCreation.mmd -o doc/sequenceDiagramsPng/lobbyCreation.png -t neutral"    
+    "build-doc": "npm run spec-status && mmdc -i doc/sequenceDiagramsMmd/userConnection.mmd -o doc/sequenceDiagramsPng/userConnection.png -t neutral && mmdc -i doc/sequenceDiagramsMmd/lobbyCreation.mmd -o doc/sequenceDiagramsPng/lobbyCreation.png -t neutral"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/mgonnet/umpire#readme",
   "devDependencies": {
+    "codecov": "^3.4.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.2",
@@ -32,9 +34,11 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-watch": "^5.1.2",
+    "istanbul": "^0.4.5",
     "jasmine": "^3.4.0",
     "jasmine-spec-status-md": "^0.1.0",
-    "mermaid.cli": "^0.5.1"
+    "mermaid.cli": "^0.5.1",
+    "nyc": "^14.1.1"
   },
   "dependencies": {
     "ws": "^7.0.0"
