--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mgonnet/umpire",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "A node.js / websocket multiplayer umpire",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/mgonnet/umpire#readme",
   "devDependencies": {
+    "chess.js": "^0.10.2",
     "codecov": "^3.4.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
