add JSDoc eslint plugin

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,6 +4,9 @@ env:
   node: true
   jasmine: true
 
+plugins:
+  - jsdoc
+
 rules:
   camelcase: error
   quotes:
@@ -12,3 +15,10 @@ rules:
   max-depth: warn
   prefer-const: error
   no-shadow: error
+  jsdoc/check-alignment: error
+  jsdoc/check-indentation: error
+  jsdoc/check-param-names: error
+  jsdoc/check-syntax: error
+  jsdoc/check-tag-names: error
+  jsdoc/check-types: error
+  jsdoc/newline-after-description: error
